2010-06-22  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (setacl): Use the long time unused ACL_DEFAULT_SIZE
	instead of a constant value.
	* security.cc (alloc_sd): Ditto.

2010-06-21  Christopher Faylor  <me+cygwin@cgf.cx>

	* tmpbuf.h: New file.
	* flock.cc: Include tmpbuf.h for new tmpbuf functionality.
	(allow_others_to_sync): Use tmpbuf rather than tmp_pathbuf.  Explain
	why.
	(lf_setlock): For consistency, use tmpbuf rather than tmp_pathbuf.
	(lf_getlock): Ditto.

2010-06-21  Christopher Faylor  <me+cygwin@cgf.cx>

	* dcrt0.cc (__api_fatal): Temporarily generate a stackdump.

2010-06-21  Christopher Faylor  <me+cygwin@cgf.cx>

	* tls_pbuf.cc (tmp_pathbuf::w_get): Report what's failing when too many
	buffers are in use.

2010-06-17  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_base::fstat_by_handle): Fetch stat
	handle only after checking for NFS.

2010-06-15  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_base::fstat_by_nfs_ea): Use handle
	returned by get_stat_handle.
	(fhandler_base::fstat_helper): Reinstatiate code to re-open the file
	when checking for executability if called via fstat.  Explain why.

2010-06-15  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (dtable::dup_worker): Reset path_conv handle in duplicated
	fhandler.
	* fhandler.cc (fhandler_base::fstatvfs): Keep handle in created
	path_conv.
	* fhandler.h (fhandler_base::get_stat_access): New method.
	(fhandler_base::get_stat_handle): New method.
	* fhandler_disk_file.cc (fhandler_base::fstat_by_handle): Use handle
	returned by get_stat_handle.  Only request inode from system if it
	isn't already set in the fhandler, and only for filesystems supporting
	them.
	(fhandler_base::fstat_fs): Use handle returned by get_stat_handle.
	Change the way open_fs is called.  Explain why.
	(fhandler_base::fstat_helper): Use handle returned by get_stat_handle.
	Never use 0 inode number.  Simplify executable recognition by re-using